[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "swarmybasecore"
version = "0.0.1"
authors = [
  { name="Józef Tran", email="jozeftran@gmail.com" },
  { name="Eryk Panter", email="eryk.panter@swarmbase.ai" },
]
description = "A small package wrapping the agency-swarm"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Go-Pomegranate/Swarmy.ai"
Issues = "https://github.com/Go-Pomegranate/Swarmy.ai/issues"